--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+ajax==3.0.0
 asgiref==3.7.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+decorator==5.1.1
 Django==4.2.2
+django-appconf==1.0.5
+gunicorn==21.2.0
+idna==3.4
+packaging==24.0
 pytube==15.0.0
+requests==2.31.0
+setuptools==60.2.0
 sqlparse==0.4.4
 typing_extensions==4.6.3
 tzdata==2023.3
+urllib3==2.0.3
+wheel==0.37.1
