--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,32 @@
 ajax==3.0.0
 asgiref==3.7.2
+attrs==23.2.0
 certifi==2023.5.7
+cffi==1.16.0
 charset-normalizer==3.1.0
 decorator==5.1.1
 Django==4.2.2
 django-appconf==1.0.5
+django-pictures==1.2.2
 gunicorn==21.2.0
+h11==0.14.0
 idna==3.4
+outcome==1.3.0.post0
 packaging==24.0
+pillow==10.3.0
+pycparser==2.22
+PySocks==1.7.1
 pytube==15.0.0
 requests==2.31.0
+selenium==4.19.0
 setuptools==60.2.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.4.4
-typing_extensions==4.6.3
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.10.0
 tzdata==2023.3
 urllib3==2.0.3
 wheel==0.37.1
+wsproto==1.2.0
